Write code for user registration happy path

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,3 +11,5 @@
   <%= f.password_field :password %>
   <%= f.submit "Sign In" %>
 <% end %>
+
+<%= link_to "New to Viewing Party? Register Here", new_user_path %>
