--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,11 @@
 <h1> Welcome, @user.username! </h1>
+
+<%= link_to "Discover Movies", discover_path, class: "btn btn-sm btn-light button-bg btn-outline-dark" %>
+
+<section id="Friends">
+  <h2>Friends</h2>
+</section>
+
+<section id="Viewing Parties">
+  <h2>Viewing Parties</h2>
+</section>
