--- a/app/views/discover/show.html.erb
+++ b/app/views/discover/show.html.erb
@@ -1,6 +1,6 @@
 <h1> Welcome, @user.username! </h1>
 
-<%= link_to "Find Top Rated Movies", movies_path, class: "btn btn-sm btn-light button-bg btn-outline-dark"%>
+<%= button_to "Find Top Rated Movies", movies_path, method: :get, local: true ,class: "btn btn-sm btn-light button-bg btn-outline-dark"%>
 
 <%= form_with url: movies_path, method: :get, local: true do |f| %>
   <%= f.text_field :search, placeholder: "Search by movie title"%>
