--- a/app/views/discover/show.html.erb
+++ b/app/views/discover/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Welcome, @user.username! </h1>
+<h1> Welcome, <%= current_user.username %>!</h1>
 
 <%= button_to "Find Top Rated Movies", movies_path, method: :get, local: true ,class: "btn btn-sm btn-light button-bg btn-outline-dark"%>
 
