--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Welcome, @user.username! </h1>
+<h1> Welcome, <%= current_user.username %>!</h1>
 
 <%= link_to "Discover Movies", discover_path, class: "btn btn-sm btn-light button-bg btn-outline-dark" %>
 
