--- a/app/views/welcome/_header.html.erb
+++ b/app/views/welcome/_header.html.erb
@@ -15,7 +15,7 @@
           </li>
           <% else %>
           <li class="nav-item" style="padding-right:10px; padding-top:2px;">
-            <%= link_to "Sign In", root_path, class: "btn btn-sm btn-light button-bg btn-outline-dark" %>
+            <%= link_to "Log In", root_path, class: "btn btn-sm btn-light button-bg btn-outline-dark" %>
           </li>
         <% end %>
       </ul>
