--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,7 +17,7 @@
     <div>
       <tbody>
         <tr>
-          <td><%= button_to movie.title, movie_path(movie), class: 'btn btn-sm btn-light button-bg btn-outline-dark' %></td>
+          <td><%= button_to movie.title, movie_path(movie.id), method: :get, class: 'btn btn-sm btn-light button-bg btn-outline-dark' %></td>
           <td>Average Vote: <%= movie.rating %></td>
         </tr>
       </tbody>
