--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,6 @@
 <h1><%= @movie.title %></h1>
+<%= button_to 'Create Viewing Party for Movie', new_party_path, method: :get, class: "btn btn-sm btn-light button-bg btn-outline-dark"%>
+<br>
 <p>Vote Average: <%= @movie.rating %></p>
 <p>Runtime: <%= @movie.runtime %></p>
 
