Update new party form

--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -9,6 +9,7 @@
         <h6>Movie Title <%= @movie.title %></h6>
         <%= form_with model: @party, local: true do |f| %>
           <%= f.hidden_field :movie_id, id: :movie_id, value: params[:movie_id] %>
+          <%= f.hidden_field :title, id: :title, value: @movie.title %>
           <%= f.hidden_field :user_id, value: current_user.id %>
           <%= f.label :duration, 'Duration of Party' %>
           <%= f.number_field :duration, id: :duration, min: @movie.runtime, max: 480, value: @movie.runtime %><br>
@@ -20,13 +21,10 @@
           <br>
           <h5>Friends:</h5>
           <% if !current_user.friends.empty? %><br/>
-            <%= f.collection_check_boxes(:friends, current_user.friends, :id, :username, include_hidden: false) do |friend|  %>
-              <%= friend.label %>
-              <%= friend.check_box(class: "btn btn-sm btn-outline-dark btn-light navbar-custom") %><br/><br/>
-            <% end %>
+              <%= f.collection_check_boxes(:users, current_user.friends, :id, :username, include_hidden: false) %><br/><br/>
           <% end %>
           <br>
-          <%= f.submit 'Create Party', class: "btn btn-sm btn-light button-bg btn-outline-dark" %>
+          <%= f.submit 'Create Party', params: {movie_id: @movie.id}, class: "btn btn-sm btn-light button-bg btn-outline-dark" %>
           <% end %>
           <% else %>
           <h3>Please Log In to Create Viewing Parties</h3>
