--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -10,7 +10,7 @@
         <%= form_with model: @party, local: true do |f| %>
           <%= f.hidden_field :movie_id, id: :movie_id, value: params[:movie_id] %>
           <%= f.hidden_field :title, id: :title, value: @movie.title %>
-          <%= f.hidden_field :user_id, value: current_user.id %>
+          <%= f.hidden_field :host, value: current_user.id %>
           <%= f.label :duration, 'Duration of Party' %>
           <%= f.number_field :duration, id: :duration, min: @movie.runtime, max: 480, value: @movie.runtime %><br>
           <%= f.label :date, 'Day' %>
