Add code to reformat runtime to hour minutes

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,7 +2,7 @@
 <%= button_to 'Create Viewing Party for Movie', new_party_path, params: {movie_id: @movie.id}, method: :get, class: "btn btn-sm btn-light button-bg btn-outline-dark"%>
 <br>
 <p>Vote Average: <%= @movie.rating %></p>
-<p>Runtime: <%= @movie.runtime %></p>
+<p>Runtime: <%= @movie.reformatted_runtime %></p>
 
 <p>Genre(s): <%= @movie.genres.join(", ") %></p>
 
