Add 2 additional endpoints

--- a/app/views/discover/show.html.erb
+++ b/app/views/discover/show.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center mt-5">
-  <%= button_to "Find Top Rated Movies", movies_path, method: :get, local: true ,class: "btn btn-sm btn-light button-bg btn-outline-dark"%>
+<%= render partial: 'shared/movie_buttons' %>
   <br>
 
   <br>
