--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,6 @@
 <div class="movie_search">
-  <%= button_to "Find Top Rated Movies", movies_path, method: :get, local: true ,class: "btn btn-sm btn-light button-bg btn-outline-dark"%>
-
+  <%= render partial: 'shared/movie_buttons' %>
+<br>
   <%= render partial: 'shared/movie_search' %>
 </div>
 
