--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -22,3 +22,31 @@
       <p><%= review.review %></p>
     </div>
   <% end %>
+
+<div align="center" id="body">
+  <div class="card navbar-custom"  style="width: 18rem;">
+    <div class="card-body">
+      <h1 class="card-title">
+        Similar Movies
+      </h1>
+    </div>
+  </div><br/><br/>
+  <% @similar_movies.each do |movie| %>
+    <div class="card navbar-custom"  style="width: 30rem;">
+      <div class="card-body">
+        <h5 class="card-title">
+          <%= link_to "#{movie.title}", movie_path(movie.id), class: "btn btn-sm btn-dark navbar-custom blacktext", params: { title: "#{movie.title}" }%>
+        </h5>
+        <h6 class="card-subtitle mb-2">
+          Rating: <%= movie.rating %>
+        </h6>
+        <% if movie.image %>
+          <h6 class="card-subtitle mb-2">
+            <img src="<%= movie.image %>" width=70%>
+          </h6>
+        <% end %>
+      </div>
+    </div>
+    <br/>
+  <% end %>
+</div>
