--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -5,18 +5,18 @@
       <h5 class="card-title">
         Viewing Party Details
       </h5>
-      <h6 class="card-subtitle mb-2">
-        <h6>Movie Title <%= @movie.title %></h6>
+      <h6 class="card-subtitle mb-2"><br>
+        <h6>Movie Title <%= @movie.title %></h6><br>
         <%= form_with model: @party, local: true do |f| %>
           <%= f.hidden_field :movie_id, id: :movie_id, value: params[:movie_id] %>
           <%= f.hidden_field :title, id: :title, value: @movie.title %>
           <%= f.hidden_field :host, value: current_user.id %>
-          <%= f.label :duration, 'Duration of Party' %>
-          <%= f.number_field :duration, id: :duration, min: @movie.runtime, max: 480, value: @movie.runtime %><br>
-          <%= f.label :date, 'Day' %>
-          <%= f.date_field :date, id: :date, min: Date.today %><br>
-          <%= f.label :start_time, 'Start Time' %>
-          <%= f.time_select :start_time, {minute_step: 15, ampm: true}, id: :start_time %>
+          <%= f.label :duration, 'Duration of Party', class: "btn btn-sm btn-light navbar-custom" %>
+          <%= f.number_field :duration, id: :duration, min: @movie.runtime, max: 480, value: @movie.runtime, class: "btn btn-sm btn-outline-dark btn-light navbar-custom" %><br>
+          <%= f.label :date, 'Day', class: "btn btn-sm btn-light navbar-custom" %>
+          <%= f.date_field :date, id: :date, min: Date.today, class: "btn btn-sm btn-outline-dark btn-light navbar-custom" %><br>
+          <%= f.label :start_time, 'Start Time', class: "btn btn-sm btn-light navbar-custom" %>
+          <%= f.time_select :start_time, {minute_step: 15, ampm: true}, id: :start_time, class: "btn btn-sm btn-outline-dark btn-light navbar-custom" %>
           <br>
           <br>
           <h5>Friends:</h5>
