--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,41 +1,55 @@
 <h1> Welcome, <%= @user.username %>!</h1>
-
-<%= link_to "Discover Movies", discover_path, class: "btn btn-sm btn-light button-bg btn-outline-dark" %>
-
+<div align="center">
+  <%= link_to "Discover Movies", discover_path, class: "btn btn-sm btn-light button-bg btn-outline-dark" %>
+</div>
 <section id="Friends">
-  <h2>Friends</h2>
-    <%= form_with url: friendships_path, method: :post, local: true do |f| %>
-      <%= f.label :email, "Email:"%>
-      <%= f.text_field :email %>
-      <%= f.submit "Add Friend" %>
-    <% end %>
-
-    <% if @user.friends.empty? %>
-        You currently have no friends.
-    <% else %>
-        <% @user.friends.each do |friend| %>
-
-          <%= friend.username %>
-        <% end %>
-    <% end %>
-
-</section>
-
-<section id="Viewing Parties">
-  <h2>Viewing Parties</h2>
-  <% if @user.parties.count == 0 %>
-    <p> You have no scheduled parties! </p>
-  <% else %>
-    <% @user.parties.each do |party|  %>
-      <%= party.title %>
-      <%= party.date %>
-      <%= party.start_time %>
-      <% if party.host == @user.id %>
-          <p> Hosting </p>
-      <% else %>
-          <p> Invited </p>
-      <% end %>
-    <% end %>
+  <h3>Friends</h3>
+  <hr></hr>
+  <%= form_with url: friendships_path, method: :post, local: true do |f| %>
+  <%= f.label :email, "Email:"%>
+  <%= f.text_field :email %>
+  <%= f.submit "Add Friend" %>
   <% end %>
+  <br>
+  <% if @user.friends.empty? %>
+  You currently have no friends.
+  <% else %>
+  <ul>
+    <% @user.friends.each do |friend| %>
 
+    <li><%= friend.username %></li>
+    <% end %>
+  </ul>
+  <% end %>
 </section>
+<br><br>
+<section id="Viewing Parties">
+  <h3>Viewing Parties</h3>
+  <hr></hr>
+  <% if @user.parties.count == 0 %>
+  <p> You have no scheduled parties! </p>
+  <% else %>
+  <% @user.parties.each do |party|  %>
+      <!-- <div class="container"> -->
+        <div class="row justify-content-md-center">
+          <div class="col-sm-8">
+            <div class="card text-center shadow mb-5 bg-white rounded">
+              <div class="card-header">
+                <h4><%= party.title %></h4>
+              </div>
+              <div class="card-body">
+                <h5 class="card-text"><%= party.date %></h5>
+                <h5 class="card-text"><%= party.start_time %></h5>
+                <% if party.host == @user.id %>
+                <h5 class="card-text"> <b>Hosting</b> </h5>
+                <% else %>
+                <h5 class="card-text"> <b>Invited</b> </h5>
+                <% end %>
+              </div>
+            </div>
+            <% end %>
+          </div>
+        </div>
+      <!-- </div> -->
+    <% end %>
+  </section>
