--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,10 @@
  */
 
 body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+  background-image: url("/assets/wallpaper.jpeg");
+  background-attachment: fixed;
+   background-size: cover;
+   background-repeat: no-repeat;
 }
 
 main {
