--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,7 @@
   <% @user.parties.each do |party|  %>
       <!-- <div class="container"> -->
         <div class="row justify-content-md-center">
-          <div class="col-sm-8">
+          <div>
             <div class="card text-center shadow mb-5 bg-white rounded">
               <div class="card-header">
                 <h4><%= link_to "#{party.title}", movie_path(party.movie_id) %><br></h4>
@@ -42,23 +42,21 @@
                 <h5 class="card-text"><%= party.date %></h5>
                 <h5 class="card-text"><%= party.start_time %></h5>
                 <% if party.host == @user.id %>
-                <h5 class="card-text"> <b>Hosting</b> </h5>
+                  <h5 class="card-text"> <b>Hosting</b> </h5>
                 <% else %>
-                <h5 class="card-text"> <b>Invited</b> </h5>
-                <h5 class="card-text"> <b>  Host: </b> <%= party.find_host(party.host).username  %>  </h5>
-
+                  <h5 class="card-text"> <b>Invited</b> </h5>
+                  <h5 class="card-text"> <b>Host: </b> <%= party.find_host(party.host).username  %>  </h5>
+                <% end %>
                 <h6>Invited Guests</h6>
                 <ul>
                 <% party.invitees.each do |invitee| %>
                   <%  if invitee.user_id == current_user.id %>
-                    <li> <b> <%= invitee.user.username %> </b> </li>
+                     <b>-- <%= invitee.user.username %> --</b><br>
                   <% else %>
-                    <li>  <%= invitee.user.username %> </li>
+                      -- <%= invitee.user.username %> --<br>
                   <% end %>
                 <% end %>
                 </ul>
-
-                <% end %>
               </div>
             </div>
             <% end %>
